Fixed a couple mistakes in README.tex

--- a/docs/README.tex
+++ b/docs/README.tex
@@ -37,22 +37,22 @@ The entire class contributed equally on this project. We discussed the design an
 
 \subsection{Test Files}
 \begin{itemize}
-	\item fullTabTest.pl – Tests making the symbol table full
-	\item keywordTest.pl – Tests each of the valid keywords
-	\item maxNumTest.pl – Tests numbers and makes sure integer overflow is detected
-	\item errorTest.pl – Tests other errors and Test that after 10 errors we quit execution
-	\item scannerOfficialTest.pl – Test a PL program from the Brinch Hanson texbook
+	\item fullTabTest.pl - Tests making the symbol table full
+	\item keywordTest.pl - Tests each of the valid keywords
+	\item maxNumTest.pl - Tests numbers and makes sure integer overflow is detected
+	\item errorTest.pl - Tests other errors and Test that after 10 errors we quit execution
+	\item scannerOfficialTest.pl - Test a PL program from the Brinch Hanson texbook
 \end{itemize}
 
 \section{Compiling and Running}
 \begin{enumerate}
 	\item Navigate into the project folder and type the following:
 
-\verb|		\$ make compiler|
+\verb|        \$ make compiler|
 
 	\item This will create a binary called compiler that cna be run with the following command:
 
-\verb|		\$ compiler <testfile-path> -o <output-file>|
+\verb|        \$ compiler <testfile-path> -o <output-file>|
 
 	\item If you omit the \verb|<output-file>| option the tokens will be output to a file called \verb|pl.out|
 \end{enumerate}
