--- a/docs/TechnicalManual.tex
+++ b/docs/TechnicalManual.tex
@@ -29,8 +29,8 @@ enabled to see what recursive descent function has been called and when tokens a
 \section{Design}
 This section decribes each class, its function, and how it connects to other classes.
 More detailed documentation of the specific functions and members of each class
-is available in the \textbf{ReferenceDoc.pdf}. \textbf{New} project additions are
-detailed after the \textbf{Administration} section.
+is available in the \textbf{ReferenceDoc.pdf}. The \textbf{New Additions} start in the
+Administration section.
 
 \subsection{Scanner}
 The Scanner class is the main class for this part of the project. It is responsible
@@ -68,32 +68,44 @@ that maps token types to a string identifer so symbols can be printed in a
 readable way.
 
 \subsection{Administration}
-The Administraton class is responsible for all of the things that are not part
-of the previous classes. At this moment it is mostly responsible for using
-the scanner and calling \verb|getToken()|. It outputs each token it receives as
-a string in a file for debugging. It is also responsible for keeping track of
-errors and printing error messages. Currently it will print only one error message
-per line of input. When it encounters a total of 10 errors it will terminate
-the scanning phase. It also keeps track of the number of the line that is being scanned.
+The Administration class is responsible for connecting all the other classes. It
+holds information for input and output files. It also is responsible for calling
+the scanner to get tokens and keeping track of line numbers. The class
+outputs each scanned token to a file while it runs. It also keeps track
+of the number of errors per line and makes sure that only one error is printed
+per line. It also keeps track of the total number of lines with errors. After 10
+lines have encountered errors the parsing is suspended.
 
 \subsection{Parser}
-The paser class is responsible for ensureing the syntax of the input program is correct.
+The paser class is responsible for ensuring the syntax of the input program is correct.
 There is only one public function in the parser \verb|parse()|. Calling this function begins
-the recursive descent parsing of the input file. Each function follows a rule in the grammar
+the recursive descent parsing of the input file. Through the administration class the next
+token is obtained from the scanner. One lookahead token is maintained at all times. This token
+is used to decide what grammar rules to pursue while parsing is taking place.
+
+Each function in the parser follows a rule in the grammar
 of pl. These functions either call other functions representing more rules as well as match
-tokens. This will ensure that the syntax is correct because if a terminal is found that
-is not expected in the input an error message is output.
-The error correction is performed by advancing tokens until the parser is back in a stable state.
-Once in a stable state we pre-emptively check the next token for errors.
+tokens. If the lookahead token does not match up with the next expected terminal symbol then an
+error is thrown. The parser calls the administration class to print the error contents. Then in
+order to recover from the error the parser looks for the next token that will put the parser back
+in a stable state so it can continue parsing. In order to do this, the parser must pass a set of
+tokens that it expects to see to the recursive functions. This way it knows when to stop
+advancing after an error. Theses sets are explained in more detail in the grammar section.
+
+If the parser is free of errors there is currently no output. Debugging information that displays
+the parser functions that are called and what tokens are matched. When errors are encountered
+it is possible to see what rule was being parsed.
 
 \subsection{Grammar}
-In order to properly perform error recovery the parser needs to know when an expected token is
-found. The set of possible proper tokens is called a stop set. These stopsets are built by the
-first sets that we built from the pl grammar. In the grammar header we explicitly build all
-the necessary first sets and store them in a map. We maintain an enum with non-terminal
-symbols to index this map and access the first sets. This map allows us build stopsets easily by
-unioning these sets together and passing them around during the parsing. Along with this map
-there are some helper functions that allow easy union a set and easily check a set for membership.
-The membership function is not stricly necessary, but it improves redability.
+In order to properly perform error recovery the parser must know what terminal symbols are expected
+to put a the parser back in a stable state. The set of expected tokens is called a stopset.
+These stopsets are built by the first sets that were built from the pl grammar.
+
+In the grammar header we explicitly build all the necessary first sets and store them in a map.
+We maintain an enum with non-terminal symbols to index this map and access the first sets.
+This map allows us build stopsets easily by unioning these sets together and passing them around during the parsing.
+Along with this map there are some helper functions that allow easy union a set and easily check a set for membership.
+The membership function is not stricly necessary, and is not being used yet, but we hope it will
+improve the readability when checking to see if a symbol is in a stopset.
 
 \end{document}
